# advent-of-code

./: .gitignore  README.md
2023/src/: main.gleam
2023/task1/: README.md  gleam.toml
2023/task1/src/: task1.gleam
2024/: .gitignore
2024/lib/: dune
2024/lib/days/: day02.ml
2024/test/: dune
2025/: build.zig  build.zig.zon
2025/src/: main.zig
2025/src/days/: day_01.zig
y2024/: dune-project
y2024/lib/days/: day01.ml  day02.ml  day1.ml
y2024/src/: main.rs
y2024/src/tasks/: task1.rs
year_2023/: gleam.toml  manifest.toml
year_2023/src/days/: day_01.gleam
year_2024/: dune-project  year_2024.opam
year_2024/lib/: dune
year_2024/lib/days/: day01.ml  day02.ml  day03.ml  dune
year_2024/test/: dune
year_2025/: year2025.cabal
year_2025/app/: Main.hs
year_2025/app/days/: Day01.hs  Day02.hs
year_2025/inputs/: solution.rb
